// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染三种模式下的下拉选择框 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(0px,24px) scale(1);
  -ms-transform: translate(0px,24px) scale(1);
  transform: translate(0px,24px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(12px,20px) scale(1);
  -ms-transform: translate(12px,20px) scale(1);
  transform: translate(12px,20px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.6);
  box-sizing: border-box;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(14px,20px) scale(1);
  -ms-transform: translate(14px,20px) scale(1);
  transform: translate(14px,20px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c3 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c3 > input.sinoui-base-input__input,
.c3 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c3 > input.sinoui-base-input__input::-moz-placeholder,
.c3 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c3 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input:-ms-input-placeholder,
.c3 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input::-ms-clear,
.c3 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c3 > input.sinoui-base-input__input:focus,
.c3 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c3 > input.sinoui-base-input__input:invalid,
.c3 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c3.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c3 .sinoui-base-input__clear {
  width: 18px;
}

.c3 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c6 {
  color: rgba(0,0,0,0.38);
}

.c7 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c9 {
  position: relative;
  overflow: hidden;
  background-color: #f5f5f5;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
}

.c9 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c9 > .sinoui-input-adornment--start {
  margin-right: 0px;
  margin-left: 10px;
}

.c9 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -6px;
}

.c9 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c9 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -12px;
}

.c9 > .sinoui-input-adornment--start,
.c9 > .sinoui-input-adornment--text {
  -webkit-transform: translateY(7.5px);
  -ms-transform: translateY(7.5px);
  transform: translateY(7.5px);
}

.c9 > .sinoui-base-input__input {
  padding: 23.5px 12px 8.5px;
  padding-top: 23.5px;
}

.c9::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c9:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c9::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c9::before,
.c9::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c9:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c9 > .sinoui-input__overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0%;
  left: 0%;
  background-color: rgba(0,0,0,0.87);
  pointer-events: none;
  z-index: 2;
  -webkit-transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  opacity: 0;
}

.c9:hover > .sinoui-input__overlay {
  opacity: 0.04;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  left: 0;
  width: 100%;
  max-width: 100%;
  pointer-events: none;
  box-sizing: border-box;
}

.c12 > div {
  border: 1px solid currentColor;
  box-sizing: border-box;
  -webkit-transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: border-color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

.c12 > .sinoui-notched-outline__leading {
  border-right: none;
  border-radius: 4px 0 0 4px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 10px;
}

.c12 > .sinoui-notched-outline__notch {
  border-left: none;
  border-right: none;
  padding: 0 4px;
  box-sizing: content-box;
}

.c12 > .sinoui-notched-outline__trailing {
  border-left: none;
  -webkit-flex: 1 0 10px;
  -ms-flex: 1 0 10px;
  flex: 1 0 10px;
  border-radius: 0 4px 4px 0;
}

.c12.sinoui-notched-outline--notched > .sinoui-notched-outline__notch {
  border-top: none;
}

.c12.sinoui-notched-outline--no-label > .sinoui-notched-outline__notch {
  padding: 0;
}

.c11 {
  position: relative;
  border-radius: 4px;
}

.c11 > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.38);
  border-width: 1px;
}

.c11:hover > .sinoui-notched-outline > div {
  border-color: rgba(0,0,0,0.87);
}

.c11 > .sinoui-base-input__input {
  padding: 16px 14px;
}

.c11 > .sinoui-input-adornment--start {
  margin-left: 14px;
  margin-right: 0px;
}

.c11 > .sinoui-input-adornment--end {
  margin-right: 12px;
  margin-left: -6px;
}

.c11 > .sinoui-input-adornment--start ~ .sinoui-base-input__input {
  margin-left: -8px;
}

.c11 > .sinoui-input-adornment--start.sinoui-input-adornment--text ~ .sinoui-base-input__input,
.c11 > .sinoui-input-adornment--end.sinoui-input-adornment--text {
  margin-left: -14px;
}

.c4 {
  color: rgba(0,0,0,0.87);
}

label ~ .c4 {
  margin-top: 16px;
}

.sinoui-form-item--floating > .sinoui-form-item__content > .sinoui-text-input > .c4 {
  margin-top: 16px;
}

.c4 > .sinoui-base-input__input {
  padding: 3.5px 0px 4.5px;
}

.c4::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c4:hover::before {
  background-color: rgba(0,0,0,0.87);
}

.c4::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c4::before,
.c4::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 1px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: content-box;
  cursor: inherit;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c1 > .sinoui-base-input {
  cursor: pointer;
}

.c1.sinoui-select--focused .sinoui-input-adornment--end .sinoui-svg-icon {
  color: #3f51b5;
}

.c1.sinoui-select--error .sinoui-input-adornment--end .sinoui-svg-icon {
  color: #f44336;
}

.c1 .sinoui-select__state-icon {
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

<div>
  <div
    className="c0 sinoui-select c1"
  >
    <label
      className="c2 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c3 sinoui-base-input c4"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 sinoui-input-adornment sinoui-input-adornment--end sinoui-select__state-icon"
      >
        <svg
          aria-hidden="true"
          className="c7 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c0 sinoui-select sinoui-select--filled c1"
  >
    <label
      className="c8 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c3 sinoui-base-input c9"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 sinoui-input-adornment sinoui-input-adornment--end sinoui-select__state-icon"
      >
        <svg
          aria-hidden="true"
          className="c7 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        className="sinoui-input__overlay"
      />
    </div>
  </div>
  <div
    className="c0 sinoui-select sinoui-select--outlined c1"
  >
    <label
      className="c10 sinoui-form-label"
    >
      Required
    </label>
    <div
      className="c3 sinoui-base-input c11"
      data-testid="baseInput"
      onClick={[Function]}
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        className="c5 sinoui-select-input sinoui-base-input__input"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span>
          ​
        </span>
      </div>
      <div
        className="c6 sinoui-input-adornment sinoui-input-adornment--end sinoui-select__state-icon"
      >
        <svg
          aria-hidden="true"
          className="c7 sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        className="c12 sinoui-notched-outline sinoui-notched-outline--no-label"
      >
        <div
          className="sinoui-notched-outline__leading"
        />
        <div
          className="sinoui-notched-outline__notch"
          style={
            Object {
              "width": 0,
            }
          }
        />
        <div
          className="sinoui-notched-outline__trailing"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`渲染不可用的下拉框 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  color: rgba(0,0,0,0.38);
  box-sizing: border-box;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,-webkit-transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms,transform 300ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  pointer-events: none;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  line-height: 1.15;
  -webkit-transform: translate(0px,24px) scale(1);
  -ms-transform: translate(0px,24px) scale(1);
  transform: translate(0px,24px) scale(1);
  will-change: transform;
  max-width: calc(100% - 24px);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.5em;
}

.c3 > .sinoui-base-input__input {
  outline: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 3.5px 0 4.5px;
  height: 1.5em;
  min-height: 1.5em;
  caret-color: #3f51b5;
}

.c3 > input.sinoui-base-input__input,
.c3 > textarea.sinoui-base-input__input {
  display: block;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
}

.c3 > input.sinoui-base-input__input::-moz-placeholder,
.c3 > textarea.sinoui-base-input__input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input::-webkit-input-placeholder,
.c3 > textarea.sinoui-base-input__input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input:-ms-input-placeholder,
.c3 > textarea.sinoui-base-input__input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c3 > input.sinoui-base-input__input::-ms-clear,
.c3 > textarea.sinoui-base-input__input::-ms-clear {
  display: none;
}

.c3 > input.sinoui-base-input__input:focus,
.c3 > textarea.sinoui-base-input__input:focus {
  outline: 0;
}

.c3 > input.sinoui-base-input__input:invalid,
.c3 > textarea.sinoui-base-input__input:invalid {
  box-shadow: none;
  caret-color: #f44336;
}

.c3.sinoui-base-input--multiline > textarea {
  resize: none;
  padding: 0;
}

.c3 .sinoui-base-input__clear {
  width: 18px;
}

.c3 .sinoui-base-input__clear > .sinoui-svg-icon {
  font-size: 18px;
  cursor: pointer;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c6 {
  color: rgba(0,0,0,0.38);
}

.c7 {
  font-size: 24px;
  width: 1em;
  height: 1em;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
}

.c4 {
  color: rgba(0,0,0,0.38);
}

label ~ .c4 {
  margin-top: 16px;
}

.sinoui-form-item--floating > .sinoui-form-item__content > .sinoui-text-input > .c4 {
  margin-top: 16px;
}

.c4 > .sinoui-base-input__input {
  padding: 3.5px 0px 4.5px;
}

.c4::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c4::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c4::before,
.c4::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

.c4::after {
  display: none;
}

.c4::before {
  background-color: rgba(0,0,0,0.26);
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: content-box;
  cursor: inherit;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c1 > .sinoui-base-input {
  cursor: default;
}

.c1.sinoui-select--focused .sinoui-input-adornment--end .sinoui-svg-icon {
  color: #3f51b5;
}

.c1.sinoui-select--error .sinoui-input-adornment--end .sinoui-svg-icon {
  color: #f44336;
}

.c1 .sinoui-select__state-icon {
  pointer-events: none;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
}

<div
  className="c0 sinoui-select sinoui-select--disabled c1"
  disabled={true}
>
  <label
    className="c2 sinoui-form-label"
    disabled={true}
  >
    Required
  </label>
  <div
    className="c3 sinoui-base-input sinoui-base-input--disabled c4"
    data-testid="baseInput"
    disabled={true}
    onClick={[Function]}
  >
    <div
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="listbox"
      className="c5 sinoui-select-input sinoui-base-input__input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      <span>
        ​
      </span>
    </div>
    <div
      className="c6 sinoui-input-adornment sinoui-input-adornment--end sinoui-select__state-icon"
    >
      <svg
        aria-hidden="true"
        className="c7 sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
